[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysep"
version = "0.3.0"
description = "Python Seismogram Extraction and Processing"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
    {name = "adjTomo Dev Team"},
    {email = "adjtomo@gmail.com"}
]
dependencies = [
    "obspy",
    "cartopy",
    "pyyaml",
]

[project.optional-dependencies]
llnl = ["llnl_db_client @ git+https://github.com/krischer/llnl_db_client.git"]
dev = ["pytest", "ipython", "ipdb"]

[project.urls]
homepage = "https://github.com/adjtomo/"
documentation = "https://github.com/adjtomo/pysep/wiki"
repository = "https://github.com/adjtomo/pysep"

[project.scripts]
pysep = "pysep.pysep:main"
recsec = "pysep.recsec:main"
