[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysep-adjtomo"
version = "0.4.0"
description = "Python Seismogram Extraction and Processing"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
    {name = "adjTomo Dev Team"},
    {email = "adjtomo@gmail.com"}
]
dependencies = [
    "obspy",
    "cartopy",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "ipython", "ipdb"]

[project.urls]
homepage = "https://github.com/adjtomo/"
documentation = "https://pysep.readthedocs.io/"
repository = "https://github.com/adjtomo/pysep"

[project.scripts]
pysep = "pysep.pysep:main"
recsec = "pysep.recsec:main"
